--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,23 @@
   --title: #FF8816;
 }
 
+body{
+  background-color: #f5f5f5 !important;
+  padding-top: 56px;
+}
+
+main {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 /* layout styles */
 nav{
   background: var(--primary);
   border-bottom: 10px solid var(--secondary);
+  position: fixed;
+  top: 0;
+  z-index: 10;
 }
 nav a{
   text-transform: uppercase;
@@ -22,9 +35,7 @@ nav .sidenav-trigger{
 }
 
 /* recipe styles */
-.recipes{
-  margin-top: 20px;
-}
+
 .card-panel.recipe{
   border-radius: 8px;
   padding: 10px;
@@ -72,4 +83,28 @@ input{
 }
 form .input-field{
   margin-top: 30px;
+}
+
+.image-grid{
+  margin-left: -10px;
+  margin-right: -10px;
+}
+
+.image-card{
+  padding-bottom: 30px !important;
+}
+
+.image-author{
+  margin-top: 7px;
+  float: left;
+}
+
+.image-open, .image-download{
+  float: right;
+  padding-left: 10px;
+  padding-top: 5px;
+}
+
+.image-open i, .image-download i{
+  color: var(--title);
 }
