--- a/css/styles.css
+++ b/css/styles.css
@@ -1,110 +1,150 @@
 /* colours */
-:root{
-  --primary: #FFE9D2;
-  --secondary: #FFE1C4;
-  --title: #FF8816;
+
+:root {
+    --primary: #FFE9D2;
+    --secondary: #FFE1C4;
+    --title: #FF8816;
 }
 
-body{
-  background-color: #f5f5f5 !important;
-  padding-top: 56px;
+html,
+body {
+    height: 100%;
+    overflow: hidden;
+    width: 100%;
+    position: fixed;
+}
+
+body {
+    background-color: #FFE1C4 !important;
 }
 
 main {
-  padding-top: 20px;
-  padding-bottom: 20px;
+    padding: 66px 0 30px;
+    height: 100%;
+    position: relative;
+    overflow: auto;
 }
 
+.app {
+    height: 100%;
+    overflow: scroll;
+}
+
+
 /* layout styles */
-nav{
-  background: var(--primary);
-  border-bottom: 10px solid var(--secondary);
-  position: fixed;
-  top: 0;
-  z-index: 10;
+
+nav {
+    background: var(--primary);
+    border-bottom: 10px solid var(--secondary);
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    height: 56px;
+    line-height: 46px;
 }
-nav a{
-  text-transform: uppercase;
-  color: var(--title);
+
+nav a {
+    text-transform: uppercase;
+    color: var(--title);
 }
-nav a span{
-  font-weight: bold;
+
+nav a span {
+    font-weight: bold;
 }
-nav .sidenav-trigger{
-  margin: 0;
+
+nav .sidenav-trigger {
+    margin: 0;
+    height: 46px !important;
+    line-height: 46px !important;
+    cursor: pointer;
 }
+
 
 /* recipe styles */
 
-.card-panel.recipe{
-  border-radius: 8px;
-  padding: 10px;
-  box-shadow: 0px 1px 3px rgba(90,90,90,0.1);
-  display: grid;
-  grid-template-columns: 2fr 6fr 1fr;
-  grid-template-areas: "image details delete";
-  position: relative;
+.card-panel.recipe {
+    border-radius: 8px;
+    padding: 10px;
+    box-shadow: 0px 1px 3px rgba(90, 90, 90, 0.1);
+    display: grid;
+    grid-template-columns: 2fr 6fr 1fr;
+    grid-template-areas: "image details delete";
+    position: relative;
 }
-.recipe img{
-  grid-area: image;
-  max-width: 60px;
+
+.recipe img {
+    grid-area: image;
+    max-width: 60px;
 }
-.recipe-details{
-  grid-area: details;
-  margin-top: 6px;
+
+.recipe-details {
+    grid-area: details;
+    margin-top: 6px;
 }
-.recipe-delete{
-  grid-area: delete;
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
+
+.recipe-delete {
+    grid-area: delete;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
 }
-.recipe-delete i{
-  font-size: 18px;
+
+.recipe-delete i {
+    font-size: 20px;
+    padding: 5px;
 }
-.recipe-title{
-  font-weight: bold;
+
+.recipe-title {
+    font-weight: bold;
 }
-.recipe-ingredients{
-  font-size: 0.8em;
+
+.recipe-ingredients {
+    font-size: 0.8em;
 }
+
 
 /* form-styles */
-.add-btn{
-  background: var(--title) !important;
-}
-input{
-  box-shadow: none !important;
-  -webkit-box-shadow: none !important;
-}
-.side-form button{
-  background: var(--title);
-  box-shadow: 1px 1px 3px rgba(90,90,90,0.2);
-}
-form .input-field{
-  margin-top: 30px;
+
+.add-btn {
+    background: var(--title) !important;
 }
 
-.image-grid{
-  margin-left: -10px;
-  margin-right: -10px;
+input {
+    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
 }
 
-.image-card{
-  padding-bottom: 30px !important;
+.side-form button {
+    background: var(--title);
+    box-shadow: 1px 1px 3px rgba(90, 90, 90, 0.2);
 }
 
-.image-author{
-  margin-top: 7px;
-  float: left;
+form .input-field {
+    margin-top: 30px;
 }
 
-.image-open, .image-download{
-  float: right;
-  padding-left: 10px;
-  padding-top: 5px;
+.image-grid {
+    margin-left: -10px;
+    margin-right: -10px;
 }
 
-.image-open i, .image-download i{
-  color: var(--title);
+.image-card {
+    padding-bottom: 30px !important;
+}
+
+.image-author {
+    margin-top: 7px;
+    float: left;
+}
+
+.image-open,
+.image-download {
+    float: right;
+    padding-left: 10px;
+    padding-top: 5px;
+}
+
+.image-open i,
+.image-download i {
+    color: var(--title);
 }
